# PseudoCoup

./: .gitignore  Agent_Memory.md  BUG_PROFILE.md  HANDOFF.md  PROGRESS.html  PROGRESS.md  PROGRESS_history.json  PROGRESS_ondeck.md  PROJECT_MAP.md  PseudoCoup_handoff_report.md  PseudoCoup_v0  README.md  WFL_and_PseudoCoup_v0_git_push.sh  fox  fox.cpp  fox.cs  fox_c.txt  fox_inverted.py  fox_inverted_c.py  print_c.py  print_cpp.py  print_cs_ast.py  pyproject.toml  run_mapper.sh  run_tests.sh  scratch.md  test_c.py  test_cs_ast.py  test_dump.py  test_dump2.py  test_php_ast.py  test_regex.py  test_rs_ast.py  test_sub.py  test_swift_ast.py  test_ts_ast.py  test_visit.py
.planning/: 00_Upgrade_Plan.md  20_PseudoIR_X1_supersession_note.md  21_two_gates.md  22_divergence_inventory.md
DevComms/: LLM_communication_protocol.md  PseudoCoup_handoff_report.md  card_selected_paint.md  color_table_report.md  coverage_extension_report.md  density_scaling.md  di_failloud_seed.md  elevation_mechanism.md  emoji_vendoring.md  emulator_walk_drybuild.md  exec_columns_report.md  exec_content_report.md  fidelity_377_restored.md  fidelity_423_closeout.md  flatmaplatest_live.md  hermeticity_timestamps_report.md  icons_report.md  interact_fix_wave1.md  interaction_oracle.md  kotlin_tests_oracle.md  kt_linemap.md  ktmap_fix_gate_reconciliation.md  launcher_fixtures.md  leak_bisect_report.md  log_0_pseudodart_forward_backward_discipline.md  log_100_ui_compare_at_scale.md  log_101_seeded_vertical_slice_trace.md  log_102_structural_matching.md  log_103_app_seeded_aggregate.md  log_104_pseudoui_generator.md  log_105_field_rule_99pct.md  log_106_behaviour_layer_gym_list.md  log_107_one_to_one_transpiled_vm.md  log_108_auto_bindings_transpiler_is_the_spec.md  log_109_second_screen_paths_generalizes.md  log_10_development_plan.md  log_110_emit_runnable_screen.md  log_111_emit_generalizes_and_complete_match.md  log_112_dynamic_second_screen_exercise_detail.md  log_113_general_enum_lift.md  (+146 more)
_deprecated/: README.md  connectivity_audit_results.md  implementation_plan.md
core/: coroutines.py  flow.py
docs/: TRANSPILER_SCOPE.md
examples/: space_station.py
layout_inspect/: ExerciseCreateScreen.diff.txt  ExerciseCreateScreen.html  ExerciseCreateScreen.kivy.json  ExerciseDetailScreen.diff.txt  ExerciseDetailScreen.html  ExerciseDetailScreen.kivy.json  ExercisePickerScreen.diff.txt  ExercisePickerScreen.html  ExercisePickerScreen.kivy.json  ExercisesScreen.diff.txt  ExercisesScreen.html  ExercisesScreen.kivy.json  GymCreateWizardScreen.diff.txt  (+77 more)
(+922 files in other folders)
