[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudocoup"
version = "4.0.0"
authors = [
  { name="PseudoCoup Contributors" },
]
description = "A universal intentful architecture transpiler."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # pseudoir (operator-semantics authority, U1/D1): path/editable dependency on the
    # sibling repo. PEP 508 direct references cannot express "editable", so install order is:
    #   pip install -e /home/lucas/Programming/PseudoIR
    #   pip install -e /home/lucas/Programming/PseudoCoup
    # The bare name below resolves against the already-installed editable pseudoir.
    "pseudoir>=0.1.0",
    # >=0.22 required: under 0.21.3 the CLI fails with current grammar wheels
    # (ingress/python.py:24 Language(tspython.language()) -> TypeError: missing 'name' arg).
    # pseudoir requires >=0.21 -- compatible.
    "tree-sitter>=0.22",
    "tree-sitter-python",
    "tree-sitter-dart",
    "tree-sitter-kotlin",
    "tree-sitter-go",  # vestigial: no Go ingress exists (Go is egress-only, needs no grammar); kept pending cleanup decision
    "tree-sitter-typescript",
    "tree-sitter-c-sharp",
    "tree-sitter-cpp",
    "tree-sitter-c",  # vestigial: no C ingress/egress exists; kept pending cleanup decision
    "tree-sitter-java",
    "tree-sitter-swift",
    "tree-sitter-rust",
    "tree-sitter-ruby",
    "tree-sitter-php",
]

[project.scripts]
pseudocoup = "pseudocoup.cli:main"
